welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: ';' expected but ',' found.
		avance(),
                        ^